# rust-exercises

./: Cargo.toml
problems/chapter2/: Cargo.toml
problems/chapter2/src/: main.rs
problems/chapter3/: Cargo.toml  main.rs
problems/chapter3/src/: lib.rs  main.rs
problems/chapter4/: Cargo.toml
problems/chapter4/src/: lib.rs  main.rs
problems/problem1/src/: lib.rs
problems/problem2/src/: lib.rs  main.rs
problems/problem3/src/: game.rs  game_element.rs  main.rs
problems/problem4/: Cargo.toml
problems/problem4/src/: lib.rs  main.rs
problems/problem5/src/: lib.rs
problems/problem6/src/: cards.rs  hand.rs
problems/problem7/src/: lib.rs
problems/problem8/src/: cafe.rs  lib.rs  main.rs  visitor.rs
src/: exercise1.rs  main.rs
