[package]
name = "exercises"
version = "0.1.0"
authors = ["Eric Rasmussen <ericrasmussen@gmail.com>"]
edition = "2018"

[[bin]]
name = "exercises"

[workspace]
members = [
  "problems/problem1",
  "problems/chapter2",
  "problems/problem2",
  "problems/chapter3",
  "problems/problem3",
  "problems/problem4",
]

[dependencies]
